{
    "version": 1,
    "name": "PlayerActions",
    "maps": [
        {
            "name": "PlayerMove",
            "id": "55125daa-862f-4410-9c13-fa16f26c808e",
            "actions": [
                {
                    "name": "xAxis",
                    "type": "Button",
                    "id": "e0aa3007-5926-4785-a296-e5cf824899a5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "zAxis",
                    "type": "Button",
                    "id": "8d3a4f34-af47-43a4-ab25-60d54c6ec800",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "abfa3438-a527-4d76-8922-b51b25a8d01f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "xAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5e751d5b-f1ef-4358-ae9a-6b375dd03ff1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "xAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "28d9e4fa-98bd-40b8-809d-cc7bbb23d5ea",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "xAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "c222b28d-968d-45ae-9a14-1ed96e06e04d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "zAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "120c2f64-aa71-47ea-853f-770d4110930e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "zAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0fa5b1ee-81e5-4f3e-a4ee-b68ead556c9e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "zAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}